Neo4j 4 and TestContainers Migration